...
    snackbarHostState: SnackbarHostState,
    modifier: Modifier = Modifier,
) {
    val session = uiState.editSession

    Scaffold(
        modifier = modifier.testTag("HealthScreen_PhoneContent"),
        snackbarHost = { SnackbarHost(snackbarHostState) },
        // 画面最上部のバー
        topBar = {
            Column {
                TopAppBar(
                    // タイトル
...
